G43/security/policy/multiple-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: multi-port-egress
spec:
  podSelector:
    matchLabels:
      role: calvin
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
      - protocol: TCP
        port: 30001
        endPort: 32767
