G43/security/policy/postgres-network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgres-allow
spec:
  podSelector:
    matchLabels:
     app: postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: grocery-api
  egress:
  - {}
